--- a/MVP_PUC_Suicidios_BR_2010_2019.ipynb
+++ b/MVP_PUC_Suicidios_BR_2010_2019.ipynb
@@ -154,7 +154,7 @@
     "\n",
     "| Nome da Coluna | Tipo     | Descrição | Domínio |\n",
     "|----------------|----------|-----------|------------------|\n",
-    "| `_c1`            | Inteiro  | Identificação do registro (número sequencial)   | Valor mínimo: 1 </br> Valor máximo: 112.491  |\n",
+    "| `Column1`      | Inteiro  | Identificação do registro (número sequencial)   | Valor mínimo: 1 </br> Valor máximo: 112.491  |\n",
     "| `estado`       | Texto    | Estado brasileiro de registro do suicídio | RJ, SP, MG e demais siglas dos estados |\n",
     "| `ano`          | Inteiro  | Ano de registro do suicídio | Valor mínimo: 2010 </br> Valor máximo: 2019 |\n",
     "| `mes`          | Inteiro  | Mês de registro do suicídio | Valor mínimo: 1 </br> Valor máximo: 12 |\n",
